나의 학습방

--- a/pages/CMM_2_회원가입_정보동의.html
+++ b/pages/CMM_2_회원가입_정보동의.html
@@ -74,7 +74,7 @@
                 <div class="one-join-terms-item__contents"></div>
               </div>
             </div>
-            <div class="one-join-button">
+            <div class="one-form-button">
               <button type="button" class="btn btn-secondary">비동의</button>
               <button type="button" class="btn btn-dark">동의</button>
             </div>
