--- a/pages/CMM_2_회원가입_정보동의2.html
+++ b/pages/CMM_2_회원가입_정보동의2.html
@@ -31,10 +31,10 @@
               <i class="ico-nav"></i>
               <p><span>STEP 3.</span> 정보입력</p>
             </div>
-            <div class="one-join-form">
-              <div class="one-join-form-item">
+            <div class="one-form">
+              <div class="one-form-item">
                 <strong><span class="text-danger">*</span>아이디</strong>
-                <div class="one-join-form-item__contents">
+                <div class="one-form-item__contents">
                   <div class="d-flex align-items-center gap-2">
                     <input
                       type="text"
@@ -48,9 +48,9 @@
                   <div class="mt-2 text-danger">아이디를 입력해주세요</div>
                 </div>
               </div>
-              <div class="one-join-form-item">
+              <div class="one-form-item">
                 <strong><span class="text-danger">*</span>비밀번호</strong>
-                <div class="one-join-form-item__contents">
+                <div class="one-form-item__contents">
                   <div class="d-flex align-items-center gap-2">
                     <input
                       type="password"
@@ -61,9 +61,9 @@
                   <div class="mt-2 text-danger">비밀번호를 입력해주세요</div>
                 </div>
               </div>
-              <div class="one-join-form-item">
+              <div class="one-form-item">
                 <strong><span class="text-danger">*</span>비밀번호 확인</strong>
-                <div class="one-join-form-item__contents">
+                <div class="one-form-item__contents">
                   <div class="d-flex align-items-center gap-2">
                     <input
                       type="password"
@@ -73,9 +73,9 @@
                   </div>
                 </div>
               </div>
-              <div class="one-join-form-item">
+              <div class="one-form-item">
                 <strong><span class="text-danger">*</span>이름</strong>
-                <div class="one-join-form-item__contents">
+                <div class="one-form-item__contents">
                   <div class="d-flex align-items-center gap-2">
                     <input
                       type="text"
@@ -85,10 +85,10 @@
                   </div>
                 </div>
               </div>
-              <div class="one-join-form-item">
+              <div class="one-form-item">
                 <strong><span class="text-danger">*</span>연락처</strong>
-                <div class="one-join-form-item__contents">
-                  <div class="one-join-form-item__phone">
+                <div class="one-form-item__contents">
+                  <div class="one-form-item__phone">
                     <select class="form-select">
                       <option selected disabled>선택</option>
                       <option>010</option>
@@ -107,10 +107,10 @@
                   </div>
                 </div>
               </div>
-              <div class="one-join-form-item">
+              <div class="one-form-item">
                 <strong><span class="text-danger">*</span>이메일</strong>
-                <div class="one-join-form-item__contents">
-                  <div class="one-join-form-item__email">
+                <div class="one-form-item__contents">
+                  <div class="one-form-item__email">
                     <p>
                       <input
                         type="text"
@@ -134,7 +134,7 @@
                 </div>
               </div>
             </div>
-            <div class="one-join-button">
+            <div class="one-form-button">
               <button type="button" class="btn btn-dark">가입하기</button>
             </div>
           </div>
