--- a/pages/CMM_3_아이디찾기.html
+++ b/pages/CMM_3_아이디찾기.html
@@ -25,10 +25,10 @@
           <div class="one-join">
             <h1>아이디 찾기</h1>
 
-            <div class="one-join-form">
-              <div class="one-join-form-item">
+            <div class="one-form">
+              <div class="one-form-item">
                 <strong>이름</strong>
-                <div class="one-join-form-item__contents">
+                <div class="one-form-item__contents">
                   <div class="d-flex align-items-center gap-2">
                     <input
                       type="text"
@@ -38,10 +38,10 @@
                   </div>
                 </div>
               </div>
-              <div class="one-join-form-item">
+              <div class="one-form-item">
                 <strong>이메일</strong>
-                <div class="one-join-form-item__contents">
-                  <div class="one-join-form-item__email">
+                <div class="one-form-item__contents">
+                  <div class="one-form-item__email">
                     <p>
                       <input
                         type="text"
@@ -62,7 +62,7 @@
                 </div>
               </div>
             </div>
-            <div class="one-join-button">
+            <div class="one-form-button">
               <button type="button" class="btn btn-dark">아이디 찾기</button>
             </div>
           </div>
