--- a/pages/CMM_4_비밀번호찾기2.html
+++ b/pages/CMM_4_비밀번호찾기2.html
@@ -25,10 +25,10 @@
           <div class="one-join">
             <h1>비밀번호 재설정</h1>
 
-            <div class="one-join-form">
-              <div class="one-join-form-item">
+            <div class="one-form">
+              <div class="one-form-item">
                 <strong>새 비밀번호</strong>
-                <div class="one-join-form-item__contents">
+                <div class="one-form-item__contents">
                   <div class="d-flex align-items-center gap-2">
                     <input
                       type="password"
@@ -38,9 +38,9 @@
                   </div>
                 </div>
               </div>
-              <div class="one-join-form-item">
+              <div class="one-form-item">
                 <strong>새 비밀번 확인</strong>
-                <div class="one-join-form-item__contents">
+                <div class="one-form-item__contents">
                   <div class="d-flex align-items-center gap-2">
                     <input
                       type="password"
@@ -51,7 +51,7 @@
                 </div>
               </div>
             </div>
-            <div class="one-join-button">
+            <div class="one-form-button">
               <button type="button" class="btn btn-dark">확인</button>
             </div>
           </div>
