--- a/pages/CMM_6_고객센터_공지사항.html
+++ b/pages/CMM_6_고객센터_공지사항.html
@@ -74,143 +74,219 @@
                     <colgroup>
                       <col style="width: 664px" />
                       <col style="width: 80px" />
-                      <col style="width: 246px" class="one-board-mo-none" />
-                      <col style="width: 210px" class="one-board-mo-none" />
+                      <col style="width: 246px" />
+                      <col style="width: 210px" />
                     </colgroup>
                     <thead>
                       <tr>
                         <th>제목</th>
                         <th>파일</th>
-                        <th class="one-board-mo-none">작성일</th>
-                        <th class="one-board-mo-none">조회수</th>
+                        <th>작성일</th>
+                        <th>조회수</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
+                        <td title="제목">
+                          <a href="">
                             <span class="badge bg-primary">공지</span>
-                            제목
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center">
-                          <a href="" class="d-flex align-items-center gap-2">
+                        <td class="text-center" title="파일">
+                          <a href="">
                             <i class="ico-file"></i>
                           </a>
                         </td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
-                        </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
+                        <td title="제목">
+                          <a href="">
                             <span class="badge bg-primary">공지</span>
-                            제목
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
-                            제목
+                        <td title="제목">
+                          <a href="">
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
-                            제목
+                        <td title="제목">
+                          <a href="">
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
-                            제목
+                        <td title="제목">
+                          <a href="">
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
-                            제목
+                        <td title="제목">
+                          <a href="">
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
-                            제목
+                        <td title="제목">
+                          <a href="">
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
-                            제목
+                        <td title="제목">
+                          <a href="">
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
-                            제목
+                        <td title="제목">
+                          <a href="">
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                       <tr>
-                        <td>
-                          <a href="" class="d-flex align-items-center gap-2">
-                            제목
+                        <td title="제목">
+                          <a href="">
+                            <p>
+                              “최근 신청한 과정의 수강 여부 및 진행 상태에 대해
+                              문의드립니다 “최근 신청한 과정의 수강 여부 및 진행
+                              상태에 대해 문의드립니다 “최근 신청한 과정의 수강
+                              여부 및 진행 상태에 대해 문의드립니다 “최근 신청한
+                              과정의 수강 여부 및 진행 상태에 대해 문의드립니다
+                            </p>
                           </a>
                         </td>
-                        <td class="text-center"></td>
-                        <td class="one-board-mo-none text-center">
-                          2025-05-24
+                        <td class="text-center" title="파일">
+                          <a href="">
+                            <i class="ico-file"></i>
+                          </a>
                         </td>
-                        <td class="one-board-mo-none text-center">23</td>
+                        <td class="text-center" title="작성일">2025-05-24</td>
+                        <td class="text-center" title="조회수">23</td>
                       </tr>
                     </tbody>
                   </table>
