--- a/pages/index.html
+++ b/pages/index.html
@@ -19,6 +19,74 @@
       <main id="content">
         <div class="one-contents">
           <div class="one-url">
+            <h2>02. 나의학습방</h2>
+            <table>
+              <tbody>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_001_나의학습방_학습현황[리스트형].html"
+                      >EDU_MYPAGE_001_나의학습방_학습현황[리스트형]</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_001_1_나의학습방_학습현황[카드형].html"
+                      >EDU_MYPAGE_001_1_나의학습방_학습현황[카드형]</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_003_나의학습방_관심과정.html"
+                      >EDU_MYPAGE_003_나의학습방_관심과정</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_004_나의학습방_관심과정2.html"
+                      >EDU_MYPAGE_004_나의학습방_관심과정2</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_005_1_나의학습방_1:1문의.html"
+                      >EDU_MYPAGE_005_1_나의학습방_1:1문의</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_005_2_나의학습방_1:1문의.html"
+                      >EDU_MYPAGE_005_2_나의학습방_1:1문의</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_005_3_나의학습방_1:1문의_글보기.html"
+                      >EDU_MYPAGE_005_3_나의학습방_1:1문의_글보기</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_006_나의학습방_회원정보 수정.html"
+                      >EDU_MYPAGE_006_나의학습방_회원정보 수정</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_MYPAGE_006_1_나의학습방_회원정보 수정.html"
+                      >EDU_MYPAGE_006_1_나의학습방_회원정보 수정</a
+                    >
+                  </td>
+                </tr>
+              </tbody>
+            </table>
             <h2>03. 로그인/회원가입/고객센터</h2>
             <table>
               <tbody>
