--- a/pages/CMM_4_비밀번호찾기.html
+++ b/pages/CMM_4_비밀번호찾기.html
@@ -25,11 +25,11 @@
           <div class="one-join">
             <h1>비밀번호찾기</h1>
 
-            <div class="one-join-form">
-              <div class="one-join-form-item">
+            <div class="one-form">
+              <div class="one-form-item">
                 <strong>이메일</strong>
-                <div class="one-join-form-item__contents">
-                  <div class="one-join-form-item__email">
+                <div class="one-form-item__contents">
+                  <div class="one-form-item__email">
                     <p>
                       <input
                         type="text"
@@ -52,9 +52,9 @@
                   </div>
                 </div>
               </div>
-              <div class="one-join-form-item">
+              <div class="one-form-item">
                 <strong>인증번호</strong>
-                <div class="one-join-form-item__contents">
+                <div class="one-form-item__contents">
                   <div class="d-flex align-items-center gap-2">
                     <input
                       type="text"
@@ -69,7 +69,7 @@
                 </div>
               </div>
             </div>
-            <div class="one-join-button">
+            <div class="one-form-button">
               <button type="button" class="btn btn-dark">
                 비밀번호 재설정
               </button>
