--- a/pages/index.html
+++ b/pages/index.html
@@ -52,21 +52,21 @@
                 </tr>
                 <tr>
                   <td>
-                    <a href="EDU_MYPAGE_005_1_나의학습방_1:1문의.html"
+                    <a href="EDU_MYPAGE_005_1_나의학습방_1_1문의.html"
                       >EDU_MYPAGE_005_1_나의학습방_1:1문의</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <a href="EDU_MYPAGE_005_2_나의학습방_1:1문의.html"
+                    <a href="EDU_MYPAGE_005_2_나의학습방_1_1문의.html"
                       >EDU_MYPAGE_005_2_나의학습방_1:1문의</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <a href="EDU_MYPAGE_005_3_나의학습방_1:1문의_글보기.html"
+                    <a href="EDU_MYPAGE_005_3_나의학습방_1_1문의_글보기.html"
                       >EDU_MYPAGE_005_3_나의학습방_1:1문의_글보기</a
                     >
                   </td>
