--- a/pages/CMM_2_회원가입_정보동의2.html
+++ b/pages/CMM_2_회원가입_정보동의2.html
@@ -86,6 +86,28 @@
                 </div>
               </div>
               <div class="one-form-item">
+                <strong><span class="text-danger">*</span>주소</strong>
+                <div class="one-form-item__contents">
+                  <div class="d-flex align-items-center gap-2">
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder=""
+                      style="width: 120px"
+                    />
+                    <button type="button" class="btn btn-dark btn-sm">
+                      우편번호찾기
+                    </button>
+                  </div>
+                  <div class="d-flex align-items-center gap-2 mt-1">
+                    <input type="text" class="form-control" placeholder="" />
+                  </div>
+                  <div class="d-flex align-items-center gap-2 mt-1">
+                    <input type="text" class="form-control" placeholder="" />
+                  </div>
+                </div>
+              </div>
+              <div class="one-form-item">
                 <strong><span class="text-danger">*</span>연락처</strong>
                 <div class="one-form-item__contents">
                   <div class="one-form-item__phone">
