수정사항 반영

--- a/pages/index.html
+++ b/pages/index.html
@@ -143,6 +143,11 @@
                     >
                   </td>
                 </tr>
+                <tr>
+                  <td>
+                    <a href="CMM_회원가입완료.html">CMM_회원가입완료</a>
+                  </td>
+                </tr>
               </tbody>
             </table>
             <h2>04. 소통채널</h2>
