--- a/pages/CMM_7_1_소통채널_리스트_상세보기.html
+++ b/pages/CMM_7_1_소통채널_리스트_상세보기.html
@@ -86,7 +86,122 @@
                       </ul>
                     </div>
                   </div>
-                  <div class="one-view-button">
+                  <div class="one-view-comment">
+                    <div class="cmt__head">
+                      <h3 class="cmt__title">
+                        댓글 <span class="cmt__count">25</span>
+                      </h3>
+                    </div>
+
+                    <!-- 작성 폼 -->
+                    <form class="cmt__form" action="#" method="post">
+                      <label class="sr-only" for="cmtContent">댓글 입력</label>
+                      <textarea
+                        id="cmtContent"
+                        class="cmt__textarea"
+                        placeholder="댓글을 입력해주세요. (최대 500자)"
+                      ></textarea>
+                      <div class="cmt__actions">
+                        <button type="submit" class="btn btn-dark">등록</button>
+                      </div>
+                    </form>
+
+                    <!-- 목록 -->
+                    <ul class="cmt__list">
+                      <!-- 댓글 1 -->
+                      <li class="cmt__item">
+                        <div class="cmt__meta">
+                          <span class="cmt__author">관리자</span>
+                          <span class="cmt__date">2025.04.25</span>
+                        </div>
+                        <div class="cmt__body">
+                          자료 잘 확인했습니다. 감사합니다!
+                        </div>
+                        <div class="cmt__item-actions">
+                          <button
+                            type="button"
+                            class="btn btn-sm btn-outline-dark"
+                          >
+                            답글
+                          </button>
+                        </div>
+
+                        <!-- 대댓글 목록 -->
+                        <ul class="cmt__replies">
+                          <li class="cmt__reply">
+                            <div class="cmt__meta">
+                              <span class="cmt__author">홍길동</span>
+                              <span class="cmt__date">2025.04.25</span>
+                            </div>
+                            <div class="cmt__body">좋은 자료 감사합니다.</div>
+                          </li>
+
+                          <!-- 대댓글 작성 폼 -->
+                          <li class="cmt__reply cmt__reply-form">
+                            <form
+                              action="#"
+                              method="post"
+                              class="cmt__form cmt__form--inline"
+                            >
+                              <label class="sr-only" for="reply-1"
+                                >답글 입력</label
+                              >
+                              <textarea
+                                id="reply-1"
+                                class="cmt__textarea"
+                                placeholder="답글을 입력해주세요. (최대 500자)"
+                              ></textarea>
+                              <div class="cmt__actions">
+                                <button
+                                  type="submit"
+                                  class="btn btn-sm btn-outline-dark"
+                                >
+                                  취소
+                                </button>
+                                <button
+                                  type="submit"
+                                  class="btn btn-sm btn-dark"
+                                >
+                                  등록
+                                </button>
+                              </div>
+                            </form>
+                          </li>
+                        </ul>
+                      </li>
+
+                      <!-- 댓글 2 -->
+                      <li class="cmt__item">
+                        <div class="cmt__meta">
+                          <span class="cmt__author">사용자A</span>
+                          <span class="cmt__date">2025.04.22</span>
+                        </div>
+                        <div class="cmt__body">
+                          첨부 파일이 열리지 않습니다. 확인 부탁드립니다.
+                        </div>
+                        <div class="cmt__item-actions">
+                          <button
+                            type="button"
+                            class="btn btn-sm btn-outline-dark"
+                          >
+                            답글
+                          </button>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                  <nav class="one-pagination">
+                    <a href="" class="one-pagination-first">처음</a>
+                    <a href="" class="one-pagination-prev">이전</a>
+                    <a href="" class="active">1</a>
+                    <a href="">2</a>
+                    <a href="">3</a>
+                    <a href="">4</a>
+                    <a href="">5</a>
+                    <a href="" class="one-pagination-next">다음</a>
+                    <a href="" class="one-pagination-last">마지막</a>
+                  </nav>
+                  <div class="one-view-button justify-content-end">
                     <button type="button" class="btn btn-dark">목록</button>
                   </div>
                 </div>
