교육신청 작업중

--- a/pages/EDU_MYPAGE_005_1_나의학습방_1_1문의.html
+++ b/pages/EDU_MYPAGE_005_1_나의학습방_1_1문의.html
@@ -129,9 +129,25 @@
                       </tr>
                     </tbody>
                   </table>
+                  <nav class="one-pagination">
+                    <a href="" class="one-pagination-first">처음</a>
+                    <a href="" class="one-pagination-prev">이전</a>
+                    <a href="" class="active">1</a>
+                    <a href="">2</a>
+                    <a href="">3</a>
+                    <a href="">4</a>
+                    <a href="">5</a>
+                    <a href="" class="one-pagination-next">다음</a>
+                    <a href="" class="one-pagination-last">마지막</a>
+                  </nav>
 
-                  <div class="text-center" style="margin-top: 20px">
-                    <button type="button" class="btn btn-dark">글 작성</button>
+                  <div class="one-board__button">
+                    <div></div>
+                    <div>
+                      <button type="button" class="btn btn-dark">
+                        글 작성
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
