--- a/pages/EDU_001_교육과정 리스트.html
+++ b/pages/EDU_001_교육과정 리스트.html
@@ -70,214 +70,178 @@
                 >
                 <strong>리더십교육</strong>
               </div>
-              <div class="one-learningstatus">
-                <div class="one-learningstatus__title">학습현황</div>
-                <div class="one-learningstatus-card">
-                  <div class="one-learningstatus-item">
-                    <div class="one-learningstatus-item__thumb">
-                      <p>법무법인 태평양 법률자료실 교육과정 1</p>
+              <div class="one-sort">
+                <a href="" class="active">전체</a>
+                <a href="">팀장 교육</a>
+                <a href="">임원 교육</a>
+                <a href="">CEO 교육 </a>
+              </div>
+              <div class="one-curriculum-list">
+                <div class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
                     </div>
-                    <div class="one-learningstatus-item__table">
-                      <table>
-                        <colgroup>
-                          <col style="width: 60px" />
-                          <col style="width: 400px" />
-                        </colgroup>
-                        <tbody>
-                          <tr>
-                            <th>과 정 명</th>
-                            <td>: 임원 리더십 교육</td>
-                          </tr>
-                          <tr>
-                            <th>수강기간</th>
-                            <td>: 2025.04.01~2025.04.10 (0일 남음)</td>
-                          </tr>
-                          <tr>
-                            <th>학습진도</th>
-                            <td>: 100%</td>
-                          </tr>
-                          <tr>
-                            <th>수료상태</th>
-                            <td>: 수료</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                    <div class="one-learningstatus-item__button">
-                      <button type="button" class="btn btn-sm btn-primary">
-                        수료증 출력
-                      </button>
-                      <button type="button" class="btn btn-sm btn-secondary">
-                        수강취소
-                      </button>
-                      <button type="button" class="btn btn-sm btn-dark">
-                        후기작성
-                      </button>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <a href="">6</a>
+                      </p>
                     </div>
                   </div>
-                  <div class="one-learningstatus-item">
-                    <div class="one-learningstatus-item__thumb">
-                      <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                      <img src="/assets/images/thumb01.svg" alt="" />
+                </div>
+                <div class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                    <img src="/assets/images/thumb01.svg" alt="" />
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
                     </div>
-                    <div class="one-learningstatus-item__table">
-                      <table>
-                        <colgroup>
-                          <col style="width: 60px" />
-                          <col style="width: 400px" />
-                        </colgroup>
-                        <tbody>
-                          <tr>
-                            <th>과 정 명</th>
-                            <td>: 임원 리더십 교육</td>
-                          </tr>
-                          <tr>
-                            <th>수강기간</th>
-                            <td>: 2025.04.01~2025.04.10 (0일 남음)</td>
-                          </tr>
-                          <tr>
-                            <th>학습진도</th>
-                            <td>: 100%</td>
-                          </tr>
-                          <tr>
-                            <th>수료상태</th>
-                            <td>: 수료</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                    <div class="one-learningstatus-item__button">
-                      <button type="button" class="btn btn-sm btn-primary">
-                        수료증 출력
-                      </button>
-                      <button type="button" class="btn btn-sm btn-secondary">
-                        수강취소
-                      </button>
-                      <button type="button" class="btn btn-sm btn-dark">
-                        후기작성
-                      </button>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <a href="">6</a>
+                      </p>
                     </div>
                   </div>
-                  <div class="one-learningstatus-item">
-                    <div class="one-learningstatus-item__thumb">
-                      <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                </div>
+                <div class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
                     </div>
-                    <div class="one-learningstatus-item__table">
-                      <table>
-                        <colgroup>
-                          <col style="width: 60px" />
-                          <col style="width: 400px" />
-                        </colgroup>
-                        <tbody>
-                          <tr>
-                            <th>과 정 명</th>
-                            <td>: 임원 리더십 교육</td>
-                          </tr>
-                          <tr>
-                            <th>수강기간</th>
-                            <td>: 2025.04.01~2025.04.10 (0일 남음)</td>
-                          </tr>
-                          <tr>
-                            <th>학습진도</th>
-                            <td>: 100%</td>
-                          </tr>
-                          <tr>
-                            <th>수료상태</th>
-                            <td>: 수료</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                    <div class="one-learningstatus-item__button">
-                      <button type="button" class="btn btn-sm btn-primary">
-                        수료증 출력
-                      </button>
-                      <button type="button" class="btn btn-sm btn-secondary">
-                        수강취소
-                      </button>
-                      <button type="button" class="btn btn-sm btn-dark">
-                        후기작성
-                      </button>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <a href="">6</a>
+                      </p>
                     </div>
                   </div>
-                  <div class="one-learningstatus-item">
-                    <div class="one-learningstatus-item__thumb">
-                      <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                      <img src="/assets/images/thumb01.svg" alt="" />
+                </div>
+                <div class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                    <img src="/assets/images/thumb01.svg" alt="" />
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
                     </div>
-                    <div class="one-learningstatus-item__table">
-                      <table>
-                        <colgroup>
-                          <col style="width: 60px" />
-                          <col style="width: 400px" />
-                        </colgroup>
-                        <tbody>
-                          <tr>
-                            <th>과 정 명</th>
-                            <td>: 임원 리더십 교육</td>
-                          </tr>
-                          <tr>
-                            <th>수강기간</th>
-                            <td>: 2025.04.01~2025.04.10 (0일 남음)</td>
-                          </tr>
-                          <tr>
-                            <th>학습진도</th>
-                            <td>: 100%</td>
-                          </tr>
-                          <tr>
-                            <th>수료상태</th>
-                            <td>: 수료</td>
-                          </tr>
-                        </tbody>
-                      </table>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <a href="">6</a>
+                      </p>
                     </div>
-                    <div class="one-learningstatus-item__button">
-                      <button type="button" class="btn btn-sm btn-primary">
-                        수료증 출력
-                      </button>
-                      <button type="button" class="btn btn-sm btn-secondary">
-                        수강취소
-                      </button>
-                      <button type="button" class="btn btn-sm btn-dark">
-                        후기작성
-                      </button>
+                  </div>
+                </div>
+                <div class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
+                    </div>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <a href="">6</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                    <img src="/assets/images/thumb01.svg" alt="" />
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
+                    </div>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <a href="">6</a>
+                      </p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="one-notice">
-                <div class="one-notice__title">공지사항</div>
-                <div class="one-notice-list">
-                  <a href="" class="one-notice-list-item">
-                    <p>
-                      [사내교육 안내] 2025년 상반기 법률기초교육 참가자 모집
-                      2025년 상반기 법률기초교육 참가자 모집 2025년 상반기
-                      법률기초교육 [사내교육 안내] 2025년 상반기 법률기초교육
-                      참가자 모집 2025년 상반기 법률기초교육 참가자 모집 2025년
-                      상반기 법률기초교육 [사내교육 안내] 2025년 상반기
-                      법률기초교육 참가자 모집 2025년 상반기 법률기초교육 참가자
-                      모집 2025년 상반기 법률기초교육
-                    </p>
-                    <span>2025.04.28</span>
-                  </a>
-                  <a href="" class="one-notice-list-item">
-                    <p>
-                      [사내교육 안내] 2025년 상반기 법률기초교육 참가자 모집
-                      2025년 상반기 법률기초교육 참가자 모집 2025년 상반기
-                      법률기초교육...
-                    </p>
-                    <span>2025.04.28</span>
-                  </a>
-                  <a href="" class="one-notice-list-item">
-                    <p>
-                      [사내교육 안내] 2025년 상반기 법률기초교육 참가자 모집
-                      2025년 상반기 법률기초교육 참가자 모집 2025년 상반기
-                      법률기초교육...
-                    </p>
-                    <span>2025.04.28</span>
-                  </a>
-                </div>
-              </div>
+              <nav class="one-pagination">
+                <a href="" class="one-pagination-first">처음</a>
+                <a href="" class="one-pagination-prev">이전</a>
+                <a href="" class="active">1</a>
+                <a href="">2</a>
+                <a href="">3</a>
+                <a href="">4</a>
+                <a href="">5</a>
+                <a href="" class="one-pagination-next">다음</a>
+                <a href="" class="one-pagination-last">마지막</a>
+              </nav>
             </div>
           </div>
         </div>
