--- a/pages/index.html
+++ b/pages/index.html
@@ -19,6 +19,46 @@
       <main id="content">
         <div class="one-contents">
           <div class="one-url">
+            <h2>01. 교육신청</h2>
+            <table>
+              <tbody>
+                <tr>
+                  <td>
+                    <a href="EDU_001_교육과정 리스트.html"
+                      >EDU_001_교육과정 리스트</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_002_교육신청_상세페이지.html"
+                      >EDU_002_교육신청_상세페이지</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_002_3_교육신청_상세페이지_결제페이지.html"
+                      >EDU_002_3_교육신청_상세페이지_결제페이지</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_002_4_교육신청_상세페이지_결제페이지.html"
+                      >EDU_002_4_교육신청_상세페이지_결제페이지</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="EDU_002_5_교육신청_상세페이지_결제페이지.html"
+                      >EDU_002_5_교육신청_상세페이지_결제페이지</a
+                    >
+                  </td>
+                </tr>
+              </tbody>
+            </table>
             <h2>02. 나의학습방</h2>
             <table>
               <tbody>
